alignment issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid black;
-}
+} */
 
 :root {
     --ecru: #D1BC91;
@@ -10,30 +10,29 @@
     --eggshell: #F5ECDA;
 }
 
-body {
-    width: 100vw;
-    height: 100vh;
-}
-
 .container {
     display: grid;
     grid-template-areas:
-    "header header"
-    "main-content main-content"
-    "main-content main-content";
+    "header header header"
+    "main-content main-content main-content"
+    "main-content main-content main-content";
+    width: 100%;
+    height: 100%;
+    justify-content: center;
 }
 
 .header {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 2fr 1fr;
     grid-area: header;
     background-color: var(--eggshell);
+    width: 100%;
 }
 
 .header .top {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 button {
@@ -47,16 +46,17 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 8px;
 }
 
 .header .right {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .right .title {
     font-size: 24px;
+    text-align: center;
 }
 
 .header .bottom {
@@ -64,29 +64,21 @@ button {
     grid-template-columns: repeat(26, 1fr);
     text-align: center;
     
-    background: var(--eggshell);
-    padding-top: 10px;
+    background: white;
     box-shadow: 0 7px 8px -3px var(--ecru);
+    margin-bottom: 28px;
+    align-content: center;
 }
 
 .bottom a {
     text-decoration: none;
     color: black;
-    width: 30px;
-}
-
-.bottom a:last-child {
-    border-right: none;
 }
 
 .main-content {
     display: grid;
     grid-template-areas: main-content;
     grid-template-columns: 1fr;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100%;
 }
 
 .cards {
@@ -94,8 +86,6 @@ button {
     grid-template-rows: min-content 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 12px;
-    align-items: center;
-    justify-items: center;
 }
 
 .card {
